objects/DObj1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <type>Email</type>
    </fields>
    <label>DObj1</label>
    <nameField>
        <label>DObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>